# multiplayer-mastermind

./: .gitignore  README.md
backend/: Procfile  pyproject.toml  railway.json
backend/app/: game.py  main.py  modes.py  protocol.py  rooms.py
backend/tests/: test_game.py  test_modes.py  test_rooms.py  test_server.py
frontend/: index.html  vercel.json
frontend/css/: style.css
frontend/js/: app.js  board.js  config.js  fx.js  share.js  stats.js  ws.js
