[project]
name = "mastermind-backend"
version = "0.1.0"
description = "Real-time multiplayer Mastermind WebSocket server"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115",
	"uvicorn[standard]>=0.34",
]

[dependency-groups]
dev = [
	"pytest>=8.0",
	"httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
